<resources>
    <string name="app_name">Bank Sampah</string>

    <!--    On Board Screen-->
    <string name="title_onboard_1">Sampahocity</string>
    <string name="title_onboard_2">Reuse</string>
    <string name="title_onboard_3">Reduce</string>
    <string name="title_onboard_4">Recycle</string>

    <string name="desc_onboard_1">Selamat Datang. Kelola sampahmu, lalu kamu bisa menjadikan sampahmu menjadi cuan!</string>
    <string name="desc_onboard_2">Reuse berarti menggunakan kembali sampah yang masih dapat digunakan untuk fungsi yang sama ataupun fungsi lainnya.</string>
    <string name="desc_onboard_3">Reduce berarti mengurangi segala sesuatu yang mengakibatkan sampah.</string>
    <string name="desc_onboard_4">Recycle berarti mengolah kembali sampah menjadi barang atau produk baru yang bermanfaat.</string>

    <!--    Syarat dan Ketentuan-->
    <string name="syarat_dan_ketentuan_title">Syarat &amp; Ketentuan Bank Sampah</string>
    <string name="syarat_desc">Syarat :\n1. Harus mempunyai akun\n2. Merupakan nasabah bank sampah\n3. Telah melakukan registrasi dan aktivasi bank sampah\n4. Nasabah harus memilah sampah secara mandiri\n5. dll</string>
    <string name="ketentuan">Ketentuan"\n1. Pengguna dapat menggunakan aplikasi jika sudah mempunyai aplikasi\n2. dll.</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--  Main Activity - Menu Description  -->
    <string name="bank_sampah_desc">Buang sampahmu dengan bank sampah untuk mendapatkan poin.</string>
    <string name="tukar_poin_desc">Tukarkan poin yang didapat dari bank sampah menjadi sembako.</string>
    <string name="sampah_harian_desc">Buang sampahmu dengan cara berlangganan paket.</string>

    <!-- Pilihan Jenis Kelamin -->
    <string name="dropdown_gender">Select gender</string>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- Jemput atau Ambil -->
    <string name="antar_desc">Kami akan mengirimkan hadiah kepada anda saat mengambil sampah</string>
    <string name="ambil_desc">Anda bisa langsung mengambil sembako anda di bank sampah terdekat</string>
    <string name="syarat_n_ketentuan_ambil">Syarat Dan Ketentuan\n\n1. Pengambilan secara Antar ke Rumah akan dilakukan bersamaan dengan penjemputan sampah selanjutnya.\n2. Pengambilan sembako harus disertai bukti penukaran point.</string>
    <string name="snk_bukti_ambil">Syarat dan Ketentuan:\n\n1. Harus menunjukan bukti untuk mengambil hadiah.\n2. Serahkan bukti kepada pengurus bank sampah.\n3. Maksimal pengambilan 3 hari.</string>

    <string name="bukti_hadiah_antar_txt">Berikan bukti kode diatas kepada petugas bank sampah untuk ditukarkan dengan sembako yang sebelumnya sudah ditukarkan dengan poin :)</string>
    <string name="snk_nota_hadiah_antar">Syarat dan Ketentuan:\n\n1. Harus menunjukan bukti untuk mengambil hadiah.\n2. Serahkan bukti kepada pengurus bank sampah.</string>
</resources>
