<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:background="@color/bg_screen"
    android:orientation="vertical"
    tools:context=".SyaratDanKetentuanActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Btn_kembali"
            android:src="@drawable/ic_back"
            android:layout_marginRight="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/syarat_dan_ketentuan_title"
            style="@style/title_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:text="@string/syarat_desc"
        style="@style/desc_text"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/ketentuan"
        style="@style/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>