<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    tools:context=".KategoriBankSampahActivity">

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="28dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14sp"
                android:onClick="kembali"
                android:src="@drawable/ic_back" />

            <TextView
                style="@style/title_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori Bank Sampah" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apa yang ingin kamu daur ulang?"
            android:textSize="14sp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/main_black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="keSNK"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/Btn_SNK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14sp"
                android:src="@drawable/ic_tanda_tanya" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Syarat &amp; Ketentuan penggunaan Bank Sampah"
                android:textSize="12sp"
                android:fontFamily="@font/inter_semi_bold"
                android:textColor="@color/biru"/>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/SV_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:fillViewport="true"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LL1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_hijau"
                android:orientation="vertical"
                android:paddingLeft="18dp"
                android:paddingTop="13dp"
                android:paddingRight="18dp"
                android:paddingBottom="13dp">

                <TextView
                    style="@style/main_menu_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sampah Organik" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/sampah_organik_img" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/main_menu_home_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_sampah_desc"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:layout_width="67dp"
                            android:layout_height="26dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:background="@drawable/bg_button"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:text="pilih"
                            android:textAlignment="center"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/outline_hijau"
                android:orientation="vertical"
                android:paddingLeft="18dp"
                android:paddingTop="13dp"
                android:paddingRight="18dp"
                android:paddingBottom="13dp"
                app:layout_constraintTop_toBottomOf="@id/menu_1">

                <TextView
                    style="@style/main_menu_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sampah Non Organik" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/sampah_non_organik_img" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/main_menu_home_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tukar_poin_desc"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:layout_width="67dp"
                            android:layout_height="26dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:background="@drawable/bg_button"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:text="pilih"
                            android:textAlignment="center"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/outline_hijau"
                android:orientation="vertical"
                android:paddingLeft="18dp"
                android:paddingTop="13dp"
                android:paddingRight="18dp"
                android:paddingBottom="13dp"
                app:layout_constraintTop_toBottomOf="@id/menu_2">

                <TextView
                    style="@style/main_menu_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sampah Non Organik Berbahaya" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/sampah_non_organik_berbahaya_img" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/main_menu_home_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sampah_harian_desc"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:layout_width="67dp"
                            android:layout_height="26dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:background="@drawable/bg_button"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:text="pilih"
                            android:textAlignment="center"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/bg_navbar"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>